# deep-learning

./: pyproject.toml
NOTES/: chapter-3.md  jenkins.md  poetry.md
chapter-3/: learn_numpy.py
